--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<!-- <a href="./index.html">Головна</a> -->
+	<a href="./index.html">Головна</a>
 	<ul>
 		<li><img src="./images/1636039403_4-papik-pro-p-vektornie-risunki-sport-4.jpg" alt="klhj" width="350"></li>
 		<li><img src="./images/bb09a58a3dd1ec71508b15234d586842_original.50953.jpg" alt="lkjk" width="350"></li>
