--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<!-- <a href="./gallery.html">Галерея</a> -->
+	<a href="./gallery.html">Галерея</a>
 	<h1>Список команд при роботі з терміналом</h1>
 	<ol>
 		<!-- <li>git status</li>
