--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
-	<a href="./gallery.html">Галерея</a>
-	<h1>Список команд при роботі з терміналом</h1>
-	<ol>
-		<!-- <li>git status</li>
-		<li>git add .</li>
-		<li>git commit -m "назва коміту"</li>
-		<li>git push</li>
-		<li>git pull</li>
-		<li>git clone</li> -->
-	</ol>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
+	<body>
+		<a href="./gallery.html">Галерея</a>
+		<h1>Список команд при роботі з терміналом</h1>
+		<ol>
+			<li>git status</li>
+			<li>git add .</li>
+			<li>git commit -m "назва коміту"</li>
+			<li>git push</li>
+			<li>git pull</li>
+			<li>git clone</li>
+		</ol>
+	</body>
 </html>
