--- a/gallery.html
+++ b/gallery.html
@@ -1,18 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
-	<a href="./index.html">Головна</a>
-	<ul>
-		<li><img src="./images/1636039403_4-papik-pro-p-vektornie-risunki-sport-4.jpg" alt="klhj" width="350"></li>
-		<li><img src="./images/bb09a58a3dd1ec71508b15234d586842_original.50953.jpg" alt="lkjk" width="350"></li>
-		<li><img src="./images/colorful-concept-sports-silhouettes-sport-260nw-2378868431.webp" alt="jhhhj" width="350"></li>
-		<li><img src="./images/depositphotos_139502720-stock-illustration-people-engaging-in-different-sports.jpg" alt="kjh" width="350"></li>
-		<li><img src="./images/depositphotos_3430480-stock-illustration-sport-silhouettes.jpg" alt="jkhg" width="350"></li>
-	</ul>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
+	<body>
+		<a href="./index.html">Головна</a>
+		<ul>
+			<li>
+				<img
+					src="./images/1636039403_4-papik-pro-p-vektornie-risunki-sport-4.jpg"
+					alt="klhj"
+					width="350"
+				/>
+			</li>
+			<li>
+				<img
+					src="./images/bb09a58a3dd1ec71508b15234d586842_original.50953.jpg"
+					alt="lkjk"
+					width="350"
+				/>
+			</li>
+			<li>
+				<img
+					src="./images/colorful-concept-sports-silhouettes-sport-260nw-2378868431.webp"
+					alt="jhhhj"
+					width="350"
+				/>
+			</li>
+			<li>
+				<img
+					src="./images/depositphotos_139502720-stock-illustration-people-engaging-in-different-sports.jpg"
+					alt="kjh"
+					width="350"
+				/>
+			</li>
+			<li>
+				<img
+					src="./images/depositphotos_3430480-stock-illustration-sport-silhouettes.jpg"
+					alt="jkhg"
+					width="350"
+				/>
+			</li>
+		</ul>
+	</body>
 </html>
